2006-02-26  Nate Nielsen  <nielsen@memberwebs.com>

    * libcryptui/cryptui-key-chooser.c:
    * libcryptui/cryptui-key-list.c:
    * libcryptui/cryptui-key-store.c:
    * libcryptui/cryptui-keyset.c:
    * libseahorse/seahorse-default-key-control.c:
    * libseahorse/seahorse-dns-sd.c:
    * libseahorse/seahorse-hkp-source.c:
    * libseahorse/seahorse-key-store.c:
    * libseahorse/seahorse-key.c:
    * libseahorse/seahorse-ldap-source.c:
    * libseahorse/seahorse-op.c:
    * libseahorse/seahorse-operation.c:
    * libseahorse/seahorse-pgp-key.c:
    * libseahorse/seahorse-pgp-source.c:
    * libseahorse/seahorse-prefs-cache.c:
    * libseahorse/seahorse-prefs.c:
    * libseahorse/seahorse-progress.c:
    * libseahorse/seahorse-server-source.c:
    * libseahorse/seahorse-ssh-key.c:
    * libseahorse/seahorse-ssh-source.c:
    * libseahorse/seahorse-util.c:
    * libseahorse/seahorse-vfs-data.c:
    * plugins/gedit/seahorse-gedit.c:
    * plugins/nautilus-ext/seahorse-nautilus.c:
    * src/seahorse-key-manager-store.c:
    * src/seahorse-key-manager.c:
    * src/seahorse-key-properties.c:
    * src/seahorse-keyserver-sync.c:
    * src/seahorse-ssh-key-properties.c:
    * src/seahorse-ssh-upload.c: Patch from Adam Schreiber to add assertions 
    in relevant places. See #328791
    
2006-02-25  Nate Nielsen  <nielsen@memberwebs.com>

    * pixmaps/Makefile.am:
    * pixmaps/seahorse-applet.png:
    * plugins/applet/GNOME_SeahorseApplet.server.in.in: Use descriptive icon
    
2006-02-25  Nate Nielsen  <nielsen@memberwebs.com>

    * data/seahorse.schemas.in:
    * plugins/applet/GNOME_SeahorseApplet.xml:
    * plugins/applet/Makefile.am:
    * plugins/applet/seahorse-applet-preferences.glade:
    * plugins/applet/seahorse-applet.c: Add option to disable clipboard 
    contents detection and updating of the panel icon.
    
2006-02-25  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-check-button-control.c: