@@ -65,13 +65,15 @@ void            seahorse_gconf_set_string_list   (const char         *key,
 
 GSList*         seahorse_gconf_get_string_list   (const char         *key);
 
+GConfEntry*     seahorse_gconf_get_entry         (const char         *key);
+
 guint           seahorse_gconf_notify            (const char         *key, 
                                                   GConfClientNotifyFunc notification_callback,
-				                                  gpointer           callback_data);
+                                                  gpointer           callback_data);
 
 void            seahorse_gconf_notify_lazy       (const char         *key,
                                                   GConfClientNotifyFunc notification_callback,
-				                                  gpointer           callback_data,
+                                                  gpointer           callback_data,
                                                   GtkWidget          *lifetime);
 
 void            seahorse_gconf_unnotify          (guint              notification_id);
