@@ -1,5 +1,12 @@
 2006-02-26  Nate Nielsen  <nielsen@memberwebs.com>
 
+    * libseahorse/seahorse-check-button-control.c:
+    * libseahorse/seahorse-gconf.c:
+    * libseahorse/seahorse-gconf.h: Load initial values into checkboxes
+    properly. Fixes bug #332655
+    
+2006-02-26  Nate Nielsen  <nielsen@memberwebs.com>
+
     * libcryptui/cryptui-key-chooser.c:
     * libcryptui/cryptui-key-list.c:
     * libcryptui/cryptui-key-store.c:
